...
                    tipAmount.doubleValue = calculateTip(
                        billAmount.value.toDoubleOrNull() ?: 0.0,
                        tipPercentage.value.toIntOrNull() ?: 15,
                        roundUp.value
                    )
                }, modifier = Modifier.semantics {
                    contentDescription = "Round Up Tip Switch"
                })
            }

            Spacer(modifier = Modifier.height(16.dp))

            Text(
...
